; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/mstest/extr_msserver.c_main.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/mstest/extr_msserver.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"\\\\.\\mailslot\\mymailslot\00", align 1
@MAILSLOT_WAIT_FOREVER = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [20 x i8] c"ReadFile() failed!\0A\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"Data read: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca [512 x i8], align 16
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8** %10, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = load i32, i32* @MAILSLOT_WAIT_FOREVER, align 4
  %13 = call i32 @CreateMailslot(i8* %11, i32 512, i32 %12, i32* null)
  store i32 %13, i32* %6, align 4
  br label %14

14:                                               ; preds = %25, %2
  %15 = load i32, i32* %6, align 4
  %16 = getelementptr inbounds [512 x i8], [512 x i8]* %7, i64 0, i64 0
  %17 = call i64 @ReadFile(i32 %15, i8* %16, i32 512, i32* %9, i32* null)
  store i64 %17, i64* %8, align 8
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* @FALSE, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %14
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @CloseHandle(i32 %23)
  ret i32 0

25:                                               ; preds = %14
  %26 = getelementptr inbounds [512 x i8], [512 x i8]* %7, i64 0, i64 0
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8* %26)
  br label %14
}

declare dso_local i32 @CreateMailslot(i8*, i32, i32, i32*) #1

declare dso_local i64 @ReadFile(i32, i8*, i32, i32*, i32*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @CloseHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
